creating archive when !exists

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,7 +15,7 @@ include_directories(${JNI_INCLUDE_DIRS} ${Boost_INCLUDE_DIR})
 set(SOURCE_FILES
         src/filemanager.hpp
         src/util/native.hpp
-        src/util/message.hpp
+        src/util/messagebox.hpp
         src/fstest.hpp
         src/archiver.cpp
         src/archiver.hpp
