--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,7 +18,14 @@ set(SOURCE_FILES
         src/archiver.cpp
         src/archiver.hpp
         src/util/archiveccore.hpp
-        src/util/archiveccore.cpp)
+        src/util/archiveccore.cpp
+        src/util/compressors/lzw/lzw.hpp
+        src/util/compressors/lzw/bitstreamwriter.cpp
+        src/util/compressors/lzw/bitstreamwriter.hpp
+        src/util/compressors/lzw/bitstreamreader.cpp
+        src/util/compressors/lzw/bitstreamreader.hpp
+        src/util/compressors/lzw/dictionary.cpp
+        src/util/compressors/lzw/dictionary.hpp)
 
 add_library(archivec_core SHARED ${SOURCE_FILES})
 target_link_libraries(archivec_core ${Boost_LIBRARIES})
