dohuya refactor'a. moved to wchat_t

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,14 +2,14 @@ cmake_minimum_required(VERSION 3.8)
 project(archivec_core)
 
 set(CMAKE_CXX_STANDARD 17)
+set(SMAKE_CXX_RELEASE_FLAGS "-Ofast")
 
 set(Boost_USE_STATIC_LIBS ON)
 set(Boost_USE_MULTITHREADED ON)
 set(Boost_USE_STATIC_RUNTIME OFF)
+
 find_package(Boost COMPONENTS system filesystem REQUIRED)
-
 find_package(JNI REQUIRED)
-
 include_directories(${JNI_INCLUDE_DIRS} ${Boost_INCLUDE_DIR})
 
 set(SOURCE_FILES
@@ -30,5 +30,5 @@ set(SOURCE_FILES
 add_library(archivec_core SHARED ${SOURCE_FILES})
 target_link_libraries(archivec_core ${Boost_LIBRARIES})
 
-add_executable(archivec main.cpp ${SOURCE_FILES})
+add_executable(archivec main.cpp ${SOURCE_FILES} src/util/util.hpp)
 target_link_libraries(archivec archivec_core)
