--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 .idea/workspace.xml
 cmake-build-debug/
+cmake-build-release/
 
 # Prerequisites
 *.d
@@ -33,6 +34,4 @@ cmake-build-debug/
 *.exe
 *.out
 *.app
-.idea/workspace.xml
-.idea/workspace.xml
 .idea/workspace.xml
